src/bin/snapshots/cg2util__cli_classify-10.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util classify grp --auto 123\")"
---
Ok(
    Cli {
        command: Classify(
            ClassifyCommand {
                cgroup: "grp",
                pids: [
                    123,
                ],
                auto: true,
            },
        ),
    },
)
