src/bin/snapshots/cg2util__cli_classify-3.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util classify grp pid\")"
---
Err(
    "error: invalid value 'pid' for '<PIDS>...': invalid digit found in string\n\nFor more information, try '--help'.\n",
)
