src/bin/snapshots/cg2util__cli_classify-4.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util classify grp 123\")"
---
Ok(
    Cli {
        command: Classify(
            ClassifyCommand {
                cgroup: "grp",
                pids: [
                    123,
                ],
                auto: false,
            },
        ),
    },
)
