src/bin/snapshots/cg2util__cli_classify-6.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util classify grp 123,456\")"
---
Ok(
    Cli {
        command: Classify(
            ClassifyCommand {
                cgroup: "grp",
                pids: [
                    123,
                    456,
                ],
                auto: false,
            },
        ),
    },
)
