src/bin/snapshots/cg2util__cli_classify-8.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util --auto classify grp 123\")"
---
Err(
    "error: unexpected argument '--auto' found\n\n  tip: 'classify --auto' exists\n\nUsage: cg2util <COMMAND>\n\nFor more information, try '--help'.\n",
)
