src/bin/snapshots/cg2util__cli_classify-9.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util classify --auto grp 123\")"
---
Ok(
    Cli {
        command: Classify(
            ClassifyCommand {
                cgroup: "grp",
                pids: [
                    123,
                ],
                auto: true,
            },
        ),
    },
)
