src/bin/snapshots/cg2util__cli_classify.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util classify\")"
---
Err(
    "error: the following required arguments were not provided:\n  <CGROUP>\n  <PIDS>...\n\nUsage: cg2util classify <CGROUP> <PIDS>...\n\nFor more information, try '--help'.\n",
)
