src/bin/snapshots/cg2util__cli_control-10.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util --auto control grp +cpu +memory\")"
---
Err(
    "error: unexpected argument '--auto' found\n\n  tip: 'control --auto' exists\n\nUsage: cg2util <COMMAND>\n\nFor more information, try '--help'.\n",
)
